# IUTestTask

./: BaseHolder.h  BaseHolderTree.cpp  BaseHolderTree.h  CMakeLists.txt  CharArrayHolder.cpp  CharArrayHolder.h  DoubleHolder.cpp  DoubleHolder.h  IntHolder.cpp  IntHolder.h  README.md  main.cpp
